--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -361,11 +361,20 @@ response:
 | 80002  | method error |
 | 80003  | internal error |
 
+{| border="1" style="border-collapse:collapse"
+| Code   |  description |
+|-
+| 80001  | params error |
+|-
+| 80002  | method error |
+|-
+| 80003  | internal error |
+|}
+
 ==Implementation==
 ====Example implementations are available at====
 
-![login](login.png)
 
-![invoke](invoke.png)
 [[Image:login.png|login]]
+
 [[Image:invoke.png|invoke]]
