--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -362,13 +362,13 @@ response:
 | 80003  | internal error |
 
 {| border="1" style="border-collapse:collapse"
-| Code   |  description |
+| Code   |  description
 |-
-| 80001  | params error |
+| 80001  | params error
 |-
-| 80002  | method error |
+| 80002  | method error
 |-
-| 80003  | internal error |
+| 80003  | internal error 
 |}
 
 ==Implementation==
