--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -350,9 +350,6 @@ response:
 | hexstring  | String |           | Required |
 | time  | String |           | Required |
 
-===Error code===
-
-
 
 | Code   |  description |
 | ------- | ------ |
@@ -361,14 +358,24 @@ response:
 | 80002  | method error |
 | 80003  | internal error |
 
+===Error code===
+
+
+
+
+
 {| border="1" style="border-collapse:collapse"
-| Code   |  description
+| Code
+ |  description
 |-
-| 80001  | params error
+| 80001
+| params error
 |-
-| 80002  | method error
+| 80002
+| method error
 |-
-| 80003  | internal error 
+| 80003
+| internal error
 |}
 
 ==Implementation==
