--- a/OEP-11/OEP-11.mediawiki
+++ b/OEP-11/OEP-11.mediawiki
@@ -51,7 +51,7 @@ API for App wake up and QR code scan in Mobile
 /api/v1/upload/{dappid}/template
 
 ====for wallet====
-POST /api/v1/post/signeddata/{dappid}
+POST /api/v1/post/signeddata/{dappid}/{msg}/{ontid or asset}
 /api/v1/contruct/transaction/{templateid}/{network}/{params}/{msg}
 POST /api/v1/send/transaction
 
@@ -64,7 +64,7 @@ POST /api/v1/send/transaction
 
 ====post signeddata====
 
-/api/v1/signeddata/{dappid}/{msg}
+/api/v1/signeddata/{dappid}/{msg}/{ontid or asset}
 
 <pre>
 {
@@ -73,7 +73,9 @@ POST /api/v1/send/transaction
     "appName":"",
     "params":{
         "rawData":"48656C6C6F20776F726C64", //Hello world
-        "address":"",
+        "ontid":"",
+        "publickey":"",
+        "assetAddress":"",
         "publickey":"",
         "signedData": "cab96ef92419df915902817b2c9ed3f6c1c4956b3115737f7c787b03eed3f49e56547f3117867db64217b84cd6c6541d7b248f23ceeef3266a9a0bd6497260cb"
     }
@@ -134,6 +136,7 @@ response:
         "value": "String:test"
       }
     ],
+    "payer": "AUr5QUfeBADq6BMY6Tp5yuMsUNGpsD7nLZ",
     "signature": {
       "m": 1,
       "signers": [
